﻿svs 22.12.2014 13:24:20 +0300 - build 4224

1. Уточнения по TREEFILE_PROJECT (Mantis#0000186)

drkns 21.12.2014 15:02:37 +0200 - build 4223

1. Экспериментально: альтернативное решение проблемы с "open with" в запускателе.

drkns 20.12.2014 14:21:00 +0200 - build 4222

1. Уточнение 4221.

drkns 20.12.2014 14:12:21 +0200 - build 4221

1. Ошибка при импорте настроек.

2. Неудачное сохранение tree3.far при выходе могло приводить к зависанию.

3. Рефакторинг.

zg 18.12.2014 17:04:23 +0200 - build 4220

1. проблемы с файлами, у которых первый символ в имени ゝ.

drkns 16.12.2014 09:27:11 +0200 - build 4219

1. 0002887: Far Manager v3.0 build 4218 x64 (2014-12-16) падает в панелях при нажатии Ctrl-F для получения полного пути

drkns 16.12.2014 00:02:43 +0200 - build 4218

1. И ещё раз.

drkns 15.12.2014 21:16:06 +0200 - build 4217

1. Уточнение 4216.

drkns 15.12.2014 19:31:52 +0200 - build 4216

1. Пара мелочей к 4214.

svs 15.12.2014 13:05:37 +0300 - build 4215

1. Mantis#0002878: Object.CheckHotkey

shmuel 15.12.2014 00:18:36 +0200 - build 4214

1. Экспериментально: колонки C0 больше нет, есть контент-колонки плагинов в любом количестве.
   Типы (они же имена) колонок задаются в режимах панелей в угловых скобках, например: <Foo>,<Bar>.

drkns 14.12.2014 21:32:16 +0200 - build 4213

1. Рефакторинг.

shmuel 13.12.2014 17:58:08 +0200 - build 4212

1. MacroControl(MCTL_ADDMACRO) с заданной функцией Callback неправильно работал в GCC-билде Фара.

svs 09.12.2014 21:54:12 +0300 - build 4211

1. SQLite 3.8.7.4

zg 07.12.2014 17:27:25 +0200 - build 4210

1. уточнение 4208: падали некоторые панельные ansi-плагины.

zg 07.12.2014 15:51:43 +0200 - build 4209

1. уточнение 4208: файлы в кодировке 1200 и 1201 открывались в просмотре в dump режиме.

drkns 06.12.2014 19:29:13 +0200 - build 4208

1. Рефакторинг.

zg 06.12.2014 01:05:54 +0200 - build 4207

1. откат 4203.2, 4204.

shmuel 04.12.2014 20:53:25 +0200 - build 4206

1. Уточнение 3680.
