@@ -1,4 +1,10 @@
-﻿svs 22.12.2014 13:24:20 +0300 - build 4224
+﻿svs 22.12.2014 15:31:42 +0300 - build 4225
+
+1. Tree. В диалоге копирования/переноса не работали Shift-F10 и Alt-F10
+
+2. Tree. Видео-артефакты (m_ModalMode с некоторых пор не просто "да/нет", а "0..2").
+
+svs 22.12.2014 13:24:20 +0300 - build 4224
 
 1. Уточнения по TREEFILE_PROJECT (Mantis#0000186)
 
